# clang

tools/clang-format-vs/: CMakeLists.txt  source.extension.vsixmanifest.in
tools/clang-format-vs/ClangFormat/: ClangFormat.csproj  ClangFormatPackage.cs
